--- a/index.html
+++ b/index.html
@@ -1,76 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Uwb imd351 by kelcie33</title>
-  </head>
+  <title>Uwb imd351</title>
+  <meta name="description" content="B IMD 351 A: Studio Elements I: Introduction">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/kelcie33/uwb_imd351">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Uwb imd351</h1>
-            <h2>B IMD 351 A: Studio Elements I: Introduction</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/kelcie33/uwb_imd351/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/kelcie33/uwb_imd351/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Uwb imd351</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">B IMD 351 A: Studio Elements I: Introduction</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/kelcie33/Wise-Mind/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/kelcie33/Wise-Mind/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/kelcie33/Wise-Mind" class="code">View Uwb imd351 on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p><strong>Wisemind</strong></p>
 
-      <span class="banner-fix"></span>
+<p><a href="http://students.washington.edu/kelcie/myproject/pages/home">http://students.washington.edu/kelcie/myproject/pages/home</a></p>
 
+<p>The goal of this project is to provide Mindfulness techniques. The website provides on-line tools that reinforce coping techniques for Seattle area residents who are suffering from anxiety disorders. These coping techniques are based on common outpatient care methods for anxiety, such as cognitive behavioral therapy (CBT) and dialectical behavior therapy (DBT). CBT techniques include journalling and reflection to understand trigger events that happen just before a panic attack. DBT techniques use meditation and mindfulness to regain control during a panic attack. People who suffer from anxiety disorders may struggle to use coping techniques during their daily routine, so an easy to use website could even improve treatment outcomes.</p>
 
-      <section id="main_content">
-        <h3>
-<a id="portfolio" class="anchor" href="#portfolio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Portfolio.</h3>
-
-<p>This website hosts all content for the IMD 351 portfolio.  It includes several PDFs of project proposals, status reports and other class artifacts.  Work was checked in periodically using separate commits.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Email me at kelcie33(at)gmail(dotcom)</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/kelcie33">kelcie33</a> can be found on <a href="https://github.com/kelcie33/uwb_imd351">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+<p>Kelcie Feeney
+IMD 351 A: Studio Elements I: Introduction
+Fall 2015</p>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/kelcie33" class="avatar"><img src="https://avatars2.githubusercontent.com/u/10329007?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/kelcie33">kelcie33</a> maintains <a href="https://github.com/kelcie33/Wise-Mind">Uwb imd351</a></p>
 
-    
-  </body>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/kelcie33/Wise-Mind/tarball/master" class="tar">tar</a><a href="https://github.com/kelcie33/Wise-Mind/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
