Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
 <p>The goal of this project is to provide Mindfulness techniques. The website provides on-line tools that reinforce coping techniques for Seattle area residents who are suffering from anxiety disorders. These coping techniques are based on common outpatient care methods for anxiety, such as cognitive behavioral therapy (CBT) and dialectical behavior therapy (DBT). CBT techniques include journalling and reflection to understand trigger events that happen just before a panic attack. DBT techniques use meditation and mindfulness to regain control during a panic attack. People who suffer from anxiety disorders may struggle to use coping techniques during their daily routine, so an easy to use website could even improve treatment outcomes.</p>
 
-<p>Kelcie Feeney
-IMD 351 A: Studio Elements I: Introduction
+<p>Kelcie Feeney</p>
+
+<p>IMD 351 A: Studio Elements I: Introduction
 Fall 2015</p>
         </article>
       </div>
